src/app/fte-entry/employee/fte-entry.component.css
/* div.outer-cont {
  margin-left: 125px;
  margin-top: 100px;
  margin-bottom: 50px;
} */

div.col-custom.col-slider {
  padding: 0 10px;
}

.fte-table-row {
  width:80px;
}

.top-margin {
  margin-top: 75px;
}

div.col-custom.table-scrollable {
  max-height: 397px;
  overflow: auto;
  padding: 10px 14px;
  width: 100%;
}

.test-buttons {
  margin-top: 50px;
  text-align: center;
}

div.table-inner-cont {
  padding-bottom: 50px;
}

table.table-ftes, table.table-ftes thead, table.table-ftes thead tr {
  position: relative;
}

table.table-ftes tbody, table.table-ftes tbody tr {
  position: relative;
}

table td.col-project-name {
  position: relative;
  padding-right: 20px;
  left: -15px;
  z-index: 1;
}

table thead tr th.header-project {
  position: relative;
  left: -15px;
  padding-right: 20px;
  z-index: 3;
}

table thead tr th.header-month {
  text-align: center;
}

table thead tr th {
  position: relative;
  z-index: 2;
  padding-bottom: 10px;
  top: -10px;
}

/* turning off for now, would like a pure css solution */
div.table-header-underlay {
  background-color: rgb(245, 245, 245);
  z-index: 2;
  position: absolute;
  top: 0px;
  padding-top: 20px;
  padding-bottom: 20px;
  width: 100%;
  left: 0px;
  width: 100%;
  color: white;
  text-align: right;
  display: none;  
}

th.header-project, th.header-month, td.col-project-name, td.totals-row-cell {
  background-color: rgb(245, 245, 245);
}

i.fa-trash-o {
  font-size: 13pt;
  color: red;
}

i.fa-trash-o:hover {
  color: gray;
  cursor: pointer;
}

/* TOTALS ROW */

table td.totals-row-cell {
  padding-top: 15px;
}

table td.col-total-name {
  position: relative;
  padding-right: 20px;
  left: -15px;
  z-index: 1;
}

input.form-control.highlight-invalid {
  border-color: rgb(236, 154, 154);
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(236, 154, 154, .6);
          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(236, 154, 154, .6);
}


/* TO-DO: COMMON STYLE - MOVE TO _SHARED */

input.form-control[disabled], select.form-control[disabled], textarea.form-control[disabled] {
  cursor: default;
  background-color: rgb(230, 230, 230);
}


.btn-primary {
  color: #fff;
  background-color: rgb(108, 117, 125);;
  border-color: rgb(108, 117, 125);;
}

